--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
         </section>
 
         <!-- bags section  -->
-        <section class="container mt-4">
+        <section class="container my-5">
             <h2>Backpack</h2>
             <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
                 <div class="col">
@@ -243,7 +243,23 @@
             </div>
 
         </section>
+        <!-- subscribe  -->
+        <section style="height:300px ;"
+            class="container bg-info d-flex justify-content-center align-items-center rounded-3">
+            <div>
+                <h1>LET'S STAY IN TOUCH</h1>
+                <p>Get updates on sales,specials and more</p>
+                <input type="text" placeholder="your email">
+                <br>
+                <button class="btn btn-warning">
+                    SUBMIT
+                </button>
+            </div>
+        </section>
     </main>
+    <footer>
+
+    </footer>
 
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
