--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <!-- header start -->
     <header>
-        <nav class="navbar navbar-expand-lg bg-light">
+        <nav class="navbar navbar-expand-lg bg-light fixed-top">
             <div class="container">
                 <a class="navbar-brand" href="#">
                     <img src="images/logo.png" alt="Bootstrap">
@@ -31,13 +31,13 @@
                             <a class="nav-link active" aria-current="page" href="#">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Shoes</a>
+                            <a class="nav-link" href="#shoes">Shoes</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Backpack</a>
+                            <a class="nav-link" href="#backpack">Backpack</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Subscribe</a>
+                            <a class="nav-link" href="#subscribe">Subscribe</a>
                         </li>
 
                     </ul>
@@ -149,7 +149,7 @@
         </section>
 
         <!-- shoes section  -->
-        <section class="container">
+        <section class="container" id="shoes">
             <h2>shoes</h2>
             <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
                 <div class="col">
@@ -197,7 +197,7 @@
         </section>
 
         <!-- bags section  -->
-        <section class="container my-5">
+        <section class="container my-5 " id="backpack">
             <h2>Backpack</h2>
             <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
                 <div class="col">
@@ -244,7 +244,7 @@
 
         </section>
         <!-- subscribe  -->
-        <section style="height:300px ;"
+        <section style="height:300px ;" id="subscribe"
             class="container bg-info d-flex justify-content-center align-items-center rounded-3">
             <div>
                 <h1>LET'S STAY IN TOUCH</h1>
@@ -257,8 +257,8 @@
             </div>
         </section>
     </main>
-    <footer>
-
+    <footer class="mt-5 text-center">
+        <p><small>&copy;2020. panda commerce.All rights reserved.Sofia, Bulgaria</small></p>
     </footer>
 
     <!-- JavaScript Bundle with Popper -->
