--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+    <!-- custom styles -->
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -45,12 +47,12 @@
                 </div>
             </div>
         </nav>
-        <!-- image slider -->
+        <!-- image slider carousel -->
         <section class="container">
             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item p-5 active">
-                        <div class="row p-5 bg-info
+                        <div class="row p-5 panda-bg-info-background
                         rounded bg-gradient d-flex align-items-center">
                             <div class="col-lg-7">
                                 <h1>Cool Dude Headphone</h1>
@@ -58,7 +60,7 @@
                                     front of funcy world</p>
                                 <h1>$420</h1>
                                 <!-- btn.btn.btn-warning -->
-                                <button class="btn btn-warning">
+                                <button class="panda-btn-buy-now">
                                     Buy Now
                                 </button>
 
@@ -70,7 +72,7 @@
 
                     </div>
                     <div class="carousel-item">
-                        <div class="row p-5 bg-info
+                        <div class="row p-5 panda-bg-info-background
                         rounded bg-gradient d-flex align-items-center">
                             <div class="col-lg-7">
                                 <h1>Mega LCD TV for Sports</h1>
@@ -78,7 +80,7 @@
                                     front of funcy world</p>
                                 <h1>$425</h1>
                                 <!-- btn.btn.btn-warning -->
-                                <button class="btn btn-warning">
+                                <button class="panda-btn-buy-now">
                                     Buy Now
                                 </button>
 
@@ -89,7 +91,7 @@
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <div class="row p-5 bg-info
+                        <div class="row p-5 panda-bg-info-background
                         rounded bg-gradient d-flex align-items-center">
                             <div class="col-lg-7">
                                 <h1>X-box for your living room</h1>
@@ -97,7 +99,7 @@
                                     front of funcy world</p>
                                 <h1>$600</h1>
                                 <!-- btn.btn.btn-warning -->
-                                <button class="btn btn-warning">
+                                <button class="panda-btn-buy-now">
                                     Buy Now
                                 </button>
 
@@ -123,7 +125,7 @@
     </header>
     <!-- categories -->
     <main>
-        <section class="container my-5">
+        <section class="container my-5 categories">
             <div class="row g-4">
                 <div class="col-lg-4 col-md-6 col-12">
                     <div class="p-3 border bg-warning d-flex align-items-center justify-content-between rounded-3">
@@ -161,7 +163,7 @@
                                 additional content. This content is a little bit longer.</p>
                         </div>
                         <div class="m-3">
-                            <button class="btn btn-warning">Buy Now</button>
+                            <button class="panda-btn-buy-now">Buy Now</button>
                         </div>
                     </div>
                 </div>
@@ -174,7 +176,7 @@
                                 content.</p>
                         </div>
                         <div class="m-3">
-                            <button class="btn btn-warning">Buy Now</button>
+                            <button class="panda-btn-buy-now">Buy Now</button>
                         </div>
                     </div>
                 </div>
@@ -188,7 +190,7 @@
                                 height action.</p>
                         </div>
                         <div class="m-3">
-                            <button class="btn btn-warning">Buy Now</button>
+                            <button class="panda-btn-buy-now">Buy Now</button>
                         </div>
                     </div>
                 </div>
@@ -209,7 +211,7 @@
                                 additional content. This content is a little bit longer.</p>
                         </div>
                         <div class="m-3">
-                            <button class="btn btn-warning">Buy Now</button>
+                            <button class="panda-btn-buy-now">Buy Now</button>
                         </div>
                     </div>
                 </div>
@@ -222,7 +224,7 @@
                                 content.</p>
                         </div>
                         <div class="m-3">
-                            <button class="btn btn-warning">Buy Now</button>
+                            <button class="panda-btn-buy-now">Buy Now</button>
                         </div>
                     </div>
                 </div>
@@ -236,7 +238,7 @@
                                 height action.</p>
                         </div>
                         <div class="m-3">
-                            <button class="btn btn-warning">Buy Now</button>
+                            <button class="panda-btn-buy-now">Buy Now</button>
                         </div>
                     </div>
                 </div>
@@ -245,13 +247,13 @@
         </section>
         <!-- subscribe  -->
         <section style="height:300px ;" id="subscribe"
-            class="container bg-info d-flex justify-content-center align-items-center rounded-3">
+            class="container panda-bg-info-background d-flex justify-content-center align-items-center rounded-3">
             <div>
                 <h1>LET'S STAY IN TOUCH</h1>
                 <p>Get updates on sales,specials and more</p>
-                <input type="text" placeholder="your email">
+                <input class="form-control" type="text" placeholder="your email">
                 <br>
-                <button class="btn btn-warning">
+                <button class="panda-btn-buy-now">
                     SUBMIT
                 </button>
             </div>
